force-app/main/default/objects/Knowledge_Audit_Flag__c/Knowledge_Audit_Flag__c.object-meta.xml
<CustomObject>
    <description>Queues proactive cleanup tasks (conflicts/duplicates) for Knowledge Managers identified by the AI audit process.</description>
    <label>Knowledge Audit Flag</label>
    <nameField>
        <displayFormat>KAF-{0000}</displayFormat>
        <label>Flag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Audit Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>