force-app/main/default/objects/Knowledge_Audit_Flag__c/fields/AI_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning__c</fullName>
    <description>The AI-generated reasoning explaining why this pair was flagged.</description>
    <label>AI Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>