force-app/main/default/objects/Knowledge_Audit_Flag__c/fields/Article_A__c.field-meta.xml
<CustomField>
    <fullName>Article_A__c</fullName>
    <description>KnowledgeArticleVersionId of the first article in the evaluated pair.</description>
    <label>Article A</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>