force-app/main/default/objects/Knowledge_Audit_Flag__c/fields/Article_B__c.field-meta.xml
<CustomField>
    <fullName>Article_B__c</fullName>
    <description>KnowledgeArticleVersionId of the second article in the evaluated pair.</description>
    <label>Article B</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>