force-app/main/default/objects/Knowledge_Audit_Flag__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <description>The type of anomaly detected between the two articles.</description>
    <label>Flag Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Contradiction</fullName>
            </value>
            <value>
                <fullName>Overlap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>