force-app/main/default/objects/Knowledge_Audit_Flag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_A__c</columns>
    <columns>Article_B__c</columns>
    <columns>Flag_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>